# kima

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYING.README  LICENSE  LICENSE.md  Makefile  OPTIONS  README.md  README.rst  VERSION  codemeta.json  examples.mk  pyproject.toml  run  setup.py  spleaf_env.yml
.github/: CITATION.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: compilers.yml  kima-install.yml  kima-package.yml  test_suite.yml  tldr.yml
data/: K2_19_full.txt  PlSy1.mean.rdb  PlSy1.noslope.mean.rdb  PlSy1.noslope.rdb  PlSy1.rdb  PlSy10.mean.rdb  PlSy10.rdb  PlSy10_all_info.rdb  PlSy11.mean.rdb  PlSy11.rdb  PlSy11_all_info.rdb  PlSy12.mean.rdb  PlSy12.rdb  PlSy12_all_info.rdb  PlSy13.mean.rdb  PlSy13.rdb  PlSy13_all_info.rdb  PlSy14.mean.rdb  PlSy14.rdb  PlSy14_all_info.rdb  PlSy15.noslope.rdb  PlSy15.rdb  PlSy15_all_info.rdb  PlSy1_all_info.rdb  PlSy2.mean.part.rdb  PlSy2.mean.rdb  PlSy2.noslope.mean.rdb  PlSy2.noslope.rdb  PlSy2.rdb  PlSy2_all_info.rdb  PlSy3.mean.rdb  PlSy3.noslope.rdb  PlSy3.rdb  PlSy3_all_info.rdb  PlSy4.mean.rdb  PlSy4.noslope.rdb  PlSy4.rdb  PlSy4_all_info.rdb  PlSy5.mean.rdb  PlSy5.rdb  (+17 more)
doc/source/: calib.rst  conf.py  multi.rst
docs/: 404.html  API.html  CNAME  Makefile  about.html  conf.py  index.html  index.rst  news.html
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  (+1 more)
docs/cpp/: start.rst
docs/docs/: index.html
examples/: README.md
examples/14Her/: 14her.rdb  Makefile  kima_setup.cpp
examples/51Peg/: 51Peg.rv  Makefile  OPTIONS  README.md  kima_setup.cpp
examples/API/: kima_setup.cpp
examples/BL2009/: BL2009_dataset1.kms.rv  BL2009_dataset1.rv  BL2009_dataset2.kms.rv  BL2009_dataset2.rv  Makefile  OPTIONS  README.md  checks.md5  kima_setup.cpp
examples/CoRoT7/: OPTIONS  README.md  checks.md5  corot7.txt  kima  kima_setup.cpp  showresults.py
examples/CoRoT7cel/: OPTIONS  README.md  kima_setup.cpp
examples/GPRN/: Makefile  OPTIONS  README.md  data_planets_analysis.py  kima_setup.cpp
examples/K2-24/: K2-24.rv  Makefile  OPTIONS  README.md  kima_setup.cpp
examples/Kepler-16/: Kepler-16.rv  OPTIONS  README.md  kima  kima_setup.cpp
examples/MA/: OPTIONS  kima_setup.cpp
examples/activity_correlations/: Makefile  OPTIONS  README.md  dummy2.txt  dummy3.txt  kima_setup.cpp  simulated1.txt  simulated2.txt
examples/arbitrary_units/: HD128621_rhk.rdb  OPTIONS  README.md  kima_setup.cpp
examples/bgplanet/: GJ1132_harps.txt  Makefile  OPTIONS  kima_setup.cpp
examples/default_priors/: Makefile  OPTIONS  checks.md5  dummy_data.rv  kima_setup.cpp
examples/many_planets/: HD10180.kms.rv  Makefile  OPTIONS  README.md  kima_setup.cpp  run  showresults.py
examples/multi_instrument/: HD106252_ELODIE.txt  HD106252_HET.txt  HD106252_HJS.txt  HD106252_Lick.txt  HD106252_joined.txt  Makefile  OPTIONS  kima_setup.cpp
examples/simple/: Makefile  OPTIONS  corot7.txt  kima_setup.cpp
examples/studentT/: OPTIONS  README.md  create_data.py  d1.txt  kima_setup.cpp
examples/trends/: OPTIONS  README.md  d1.txt  kima_setup.cpp
kima/: AMDstability.cpp  AMDstability.h  BDmodel.cpp  BDmodel.h  BINARIESmodel.cpp  BINARIESmodel.h  ConditionalPrior.cpp  ConditionalPrior.h  Data.cpp  Data.h  GP.cpp  GP.h  GPmodel.cpp  GPmodel.h  GPmodel2.cpp  GPmodel2.h  RVFWHMmodel.cpp  RVFWHMmodel.h  RVmodel.cpp  RVmodel.h  kepler.cpp  kepler.h  kima.h  paths.py  pykepler.cpp  utils.h
kima/distributions/: Beta.cpp  Beta.h  BetaBinom.cpp  BetaBinom.h  Empirical.h  Fixed.cpp  Fixed.h  Gaussian_from_Tc.cpp  Gaussian_from_Tc.h  LogNormal.cpp  LogNormal.h  distributions.h  incbeta.cpp  incbeta.h  invincbeta.cpp  invincbeta.h
libs/unistd/: getopt.h  unistd.h
paper/: aa.cls  build_paper.sh  paper.bib  paper.md  paper.tex  zotero_library.bib
pykima/: GP.py  LICENSE  __init__.py  analysis.py  check_priors.py  classic.py  crossing_orbits.py  display.py  dnest4.py  gprn.py  gui_helpers.py  keplerian.py  kimaGUI.py  kimaGUI.ui  make_template.py  make_template.template  model.py  priors.py  report_template.py  results.py  run.py  showresults.py  utils.py  version.py
pykima/template/: Makefile  OPTIONS  README.md  kima_setup.cpp  run
reports/: correlation_plot.py  systems_table.tex
results/priors/: OPTIONS  plot_priors.py
scripts/: analyse.py  check_priors.py  data_handler.py  display.py  dnest4.py  fit_trends.py  joss_paper_figure.py  run.py  run_analysis.py  showresults.py
sounds/: README.md
spleaf/: __info__.py  libspleaf.h  term.py
src/: AMDstability.cpp  AMDstability.h  ConditionalPrior.cpp  ConditionalPrior.h  ConditionalPrior_2.cpp  ConditionalPrior_2.h  Data.cpp  Data.h  GPRN.cpp  GPRN.h  MOmodel.cpp  MOmodel.h  Means.cpp  Means.h  MultiSite.h  MultiSite2.cpp  MultiSite2.h  MyConditionalPrior.cpp  MyConditionalPrior.h  MyModel.cpp  MyModel.cpp.template  MyModel.h  Nodes.cpp  Nodes.h  RVConditionalPrior.cpp  RVConditionalPrior.h  RVFWHMmodel.cpp  RVFWHMmodel.h  RV_binaries_model.cpp  RV_binaries_model.h  RVmodel.cpp  RVmodel.h  Weights.cpp  Weights.h  default_GPRN_priors.h  default_GP_priors.h  default_extra_priors.h  default_hyper_priors.h  default_planet_priors.h  default_priors.h  (+7 more)
src/distributions/: Empirical.cpp  Empirical.h  Fixed.cpp  Fixed.h  Gaussian_from_Tc.cpp  Gaussian_from_Tc.h  InvGamma.cpp  InvGamma.h  distributions.h  mixGaussianLogUniform.cpp  mixGaussianLogUniform.h
test/: test_cov.py  test_spleaf.py
tests/: b.md  conftest.py  run_tests.sh  test_ConditionalPrior.cpp  test_Data.cpp  test_datafiles.py  test_kima.py  test_np_calculations.py  test_priors.py
tests/data_tests/: csv_file.txt  file_inst1.txt  file_inst2.txt  just_one_line.txt  multi_instrument.txt  simulated1.txt  simulated2.txt  simulated3.txt  with_comments.txt
tests/test_suite/: 51Peg_sample_seed43.txt  BL2009_sample_seed43.txt  CoRoT7_sample_seed43.txt  OPTIONS  multi_instrument_sample_seed43.txt  studentT_sample_seed43.txt
(+6 files in other folders)
