[build-system]
requires = ["setuptools", "pybind11~=2.6.1"]
build-backend = "setuptools.build_meta"

[project]
name = "kima"
version = "0.1.24"
description = "A data analysis framework for exoplanet detection"
authors = [
    {name = "João Faria", email="joao.faria@astro.up.pt"},
]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["exoplanets", "bayesian", "gaussian processes", "radial velocity"]


requires-python = ">=3.7"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "corner",
    "loguniform",
    "kumaraswamy",
    "urepr",
    "astropy",
    "jaxlib", 
    "jax",
    "rebound",
    "psutil",
    "tinygp",
]

[project.scripts]
kima-checkpriors = "pykima.check_priors:main"
kima-template = "pykima.make_template:main"
kima-run = "pykima.run:run_local"
kima-showresults = "pykima.showresults:showresults"



[tool.setuptools]
packages = ["kima", "pykima"]

[tool.setuptools.package-data]
kima = [
    "kima.h",
    "*.h", "*.cpp", "**/*.h", #"**/*.cpp",
    # 
    "vendor/cpp-loadtxt/src/*.hpp", 
    # 
    "vendor/DNest4/code/*.h", 
    "vendor/DNest4/code/Distributions/*.h",
    "vendor/DNest4/code/RJObject/*.h", "vendor/DNest4/code/RJObject/**/*.h",
    # go down many levels
    "vendor/eigen/Eigen/*", # all files
    "vendor/eigen/Eigen/*/*", # all files in all dirs
    "vendor/eigen/Eigen/*/*/*", # ...
    "vendor/eigen/Eigen/*/*/*/*", # ...
    "vendor/eigen/Eigen/*/*/*/*/*", # ...
]

[tool.setuptools.exclude-package-data]
kima = [
    "vendor/DNest4/code/Examples/*",
    "vendor/DNest4/code/Templates/*",
]


[project.urls]
homepage = "https://kima.science"
documentation = "https://github.com/j-faria/kima"
repository = "https://github.com/j-faria/kima"
